--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,13 @@
 ----------------------
+Version LEA 0.0.1
+----------------------
+
+- renamed from TEA to LEA
+- basic login and registration via ESI, buggy
+- many legacy code of TEA was commented or just not working, will be fixed in future
+- compatibility with TEA database is also broken, will be fixed in future
+
+----------------------
 Version 1.3.0 r172
 ----------------------
 
